# make the parent directory path available for includes
include_directories(../src)

if(NOT MSVC)
    add_compile_options(-fno-access-control)
    add_compile_options(-g -ggdb -O0)
    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        add_compile_options(-Wno-thread-safety)
    endif()
endif()

file(GLOB_RECURSE sources *.c *.cpp)
foreach(src ${sources})
    get_filename_component(name ${src} NAME_WE)
    set(test "${name}-test")
    message("test: ${test}, ${src}")
    add_executable(${test} ${src})
    add_test(${test} ${test})
    target_link_libraries(${test} mc-core)
    target_link_libraries(${test} Catch2::Catch2)
endforeach(src sources)
